# ResticTotalCommanderWfxPlugin

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE.txt  PLAN.md  README.md  README.txt  build_release.bat  restic-wfx-plugin-plan.md  restic_wfx.def  test_load.ps1
include/: fsplugin.h
src/: json_parse.c  json_parse.h  ls_cache.c  ls_cache.h  plugin_main.c  repo_config.c  repo_config.h  restic_process.c  restic_process.h  wfx_interface.c  wfx_interface.h
